[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Coin.png" type="Texture" id=1]
[ext_resource path="res://Sprites/roomLeft.png" type="Texture" id=2]
[ext_resource path="res://Sprites/room.png" type="Texture" id=3]
[ext_resource path="res://Sprites/dirt1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Tile.gd" type="Script" id=5]
[ext_resource path="res://Sprites/stairsUp.png" type="Texture" id=6]
[ext_resource path="res://Sprites/roomRight.png" type="Texture" id=7]
[ext_resource path="res://Sprites/stairsDown.png" type="Texture" id=8]

[node name="Dirt" type="Node2D"]
position = Vector2( 32, 32 )
script = ExtResource( 5 )

[node name="Dirt" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Room" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Doors" type="Node2D" parent="."]

[node name="DoorLeft" type="Sprite" parent="Doors"]
visible = false
texture = ExtResource( 2 )

[node name="DoorRight" type="Sprite" parent="Doors"]
visible = false
texture = ExtResource( 7 )

[node name="Stairs" type="Node2D" parent="."]
visible = false

[node name="StairsUp" type="Sprite" parent="Stairs"]
texture = ExtResource( 6 )

[node name="StairsDown" type="Sprite" parent="Stairs"]
position = Vector2( 0, -64 )
texture = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 1

[node name="Arrows" type="Node2D" parent="."]

[node name="ArrowLeft" type="Sprite" parent="Arrows"]
position = Vector2( -32, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="ControlLeft" type="Control" parent="Arrows/ArrowLeft"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
mouse_filter = 1

[node name="ArrowRight" type="Sprite" parent="Arrows"]
position = Vector2( 32, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="ControlRight" type="Control" parent="Arrows/ArrowRight"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
mouse_filter = 1

[node name="ArrowDown" type="Sprite" parent="Arrows"]
position = Vector2( 0, 32 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="ControlDown" type="Control" parent="Arrows/ArrowDown"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
mouse_filter = 1

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="gui_input" from="Arrows/ArrowLeft/ControlLeft" to="." method="_on_ControlLeft_gui_input"]
[connection signal="gui_input" from="Arrows/ArrowRight/ControlRight" to="." method="_on_ControlRight_gui_input"]
[connection signal="gui_input" from="Arrows/ArrowDown/ControlDown" to="." method="_on_ControlDown_gui_input"]
